--- a/Blockchain.wiki
+++ b/Blockchain.wiki
@@ -22,3 +22,7 @@
 
 - splinterlands (game)
 - leagueofkingdoms (game)
+
+== impots ==
+
+voir https://cryptoast.fr/erreurs-declaration-revenu-crypto/
